--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,3 +16,71 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+/* mobile size */
+section.leader {
+  /* display: flex;
+  flex */
+}
+
+/* tablet size */
+@media only screen and  (min-width: 48em) and (max-width: 64em) {
+  section.leader {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(9, 1fr);
+  }
+}
+
+/* desktop size */
+@media only screen and  (min-width: 64em) {
+  section.leader {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+  }
+}
+
+.leader h2 {
+  grid-column: 2 / span 6;
+  grid-row: 1 / span 3;
+}
+
+@media only screen and  (min-width: 64em) {
+  .leader h2 {
+    grid-column: 2 / span 7;
+    grid-row: 1 / span 2;
+  }
+}
+
+@media only screen and  (min-width: 48em) and (max-width: 64em) {
+  .leader div.photo {
+    grid-column: 5 / span 6;
+    grid-row: 3 / span 4;
+    overflow: hidden;
+  }
+}
+
+/* desktop size */
+@media only screen and  (min-width: 64em) {
+  .leader div.photo {
+    grid-column: 5 / span 6;
+    grid-row: 3 / span 4;
+    overflow: hidden;
+  }
+}
+
+.leader h1 {
+  grid-column: 3 / span 8;
+  grid-row: 7 / span 1;
+  margin-top: 4%;
+}
+section.leader img {
+  filter: grayscale(100%);
+}
+
+section.image-line img {
+  height: 30vh;
+  width: 100%;
+  object-fit: cover;
+}
