--- a/src/css/main.css
+++ b/src/css/main.css
@@ -17,70 +17,78 @@ code {
     monospace;
 }
 
-/* mobile size */
-section.leader {
-  /* display: flex;
-  flex */
+.border-left:after {
+  content: ""; /* This is necessary for the pseudo element to work. */ 
+  display: block; /* This will put the pseudo element on its own line. */
+  margin: 0 0 4rem; 
+  width: 80%; /* Change this to whatever width you want. */
+  padding-bottom: 2rem; /* This creates some space between the element and the border. */
+  border-bottom: 3px solid #ffffff; /* This creates the border. Replace black with whatever color you want. */
 }
 
-/* tablet size */
-@media only screen and  (min-width: 48em) and (max-width: 64em) {
-  section.leader {
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: repeat(9, 1fr);
+.border-right:after {
+  content: ""; /* This is necessary for the pseudo element to work. */ 
+  display: block; /* This will put the pseudo element on its own line. */
+  margin: 0 0 0 8rem; 
+  padding-bottom: 2rem; /* This creates some space between the element and the border. */
+  border-bottom: 3px solid #ffffff; /* This creates the border. Replace black with whatever color you want. */
+}
+
+@media only screen and (max-width: 600px) {
+  .border-left:after, .border-right:after{
+    width: 100%;
   }
 }
 
-/* desktop size */
-@media only screen and  (min-width: 64em) {
-  section.leader {
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: repeat(7, 1fr);
-  }
-}
-
-.leader h2 {
-  grid-column: 2 / span 6;
-  grid-row: 1 / span 3;
-}
-
-@media only screen and  (min-width: 64em) {
-  .leader h2 {
-    grid-column: 2 / span 7;
-    grid-row: 1 / span 2;
-  }
-}
-
-@media only screen and  (min-width: 48em) and (max-width: 64em) {
-  .leader div.photo {
-    grid-column: 5 / span 6;
-    grid-row: 3 / span 4;
-    overflow: hidden;
-  }
-}
-
-/* desktop size */
-@media only screen and  (min-width: 64em) {
-  .leader div.photo {
-    grid-column: 5 / span 6;
-    grid-row: 3 / span 4;
-    overflow: hidden;
-  }
-}
-
-.leader h1 {
-  grid-column: 3 / span 8;
-  grid-row: 7 / span 1;
-  margin-top: 4%;
-}
-section.leader img {
+.grayscale {
   filter: grayscale(100%);
+}
+
+.inverted {
+  color: #000000;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 section.image-line img {
   height: 30vh;
   width: 100%;
   object-fit: cover;
+}
+
+
+
+
+/* main text grid fun times */
+section.main-text {
+  width: 80%;
+  margin: 0 auto 5rem;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: max-content;
+}
+
+section.main-text .grid-item-2 {
+  grid-column: 4 / span 5;
+  grid-row: 2 / span 2;
+}
+
+section.main-text .grid-item-1 {
+  grid-column: 2 / span 4;
+  grid-row: 1 / span 2;
+}
+
+
+section.main-text .grid-item-3 {
+  grid-column: 6 / span 4;
+  grid-row: 3 / span 2;
+}
+
+section.main-text .grid-item-4 {
+  grid-column: 3 / span 4;
+  grid-row: 7 / span 2;
+}
+
+section.main-text .grid-item-5 {
+  grid-column: 1 / span 4;
+  grid-row: 6 / span 2;
 }
