--- a/src/css/main.css
+++ b/src/css/main.css
@@ -46,7 +46,7 @@ code {
 
 .inverted {
   color: #000000;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255);
 }
 
 section.image-line img {
@@ -57,38 +57,43 @@ section.image-line img {
 
 
 
+@media (min-width: 1281px) { 
+  /* main text grid fun times, only for desktopsss */
+  section.main-text {
+    width: 80%;
+    margin: 0 auto 5rem;
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: max-content;
+  }
 
-/* main text grid fun times */
-section.main-text {
-  width: 80%;
-  margin: 0 auto 5rem;
-  display: grid;
-  grid-template-columns: repeat(10, 1fr);
-  grid-template-rows: max-content;
-}
+  section.main-text .grid-item-2 {
+    grid-column: 4 / span 5;
+    grid-row: 2 / span 2;
+  }
 
-section.main-text .grid-item-2 {
-  grid-column: 4 / span 5;
-  grid-row: 2 / span 2;
-}
-
-section.main-text .grid-item-1 {
-  grid-column: 2 / span 4;
-  grid-row: 1 / span 2;
-}
+  section.main-text .grid-item-1 {
+    grid-column: 2 / span 4;
+    grid-row: 1 / span 2;
+  }
 
 
-section.main-text .grid-item-3 {
-  grid-column: 6 / span 4;
-  grid-row: 3 / span 2;
-}
+  section.main-text .grid-item-3 {
+    grid-column: 6 / span 4;
+    grid-row: 3 / span 2;
+  }
 
-section.main-text .grid-item-4 {
-  grid-column: 3 / span 4;
-  grid-row: 7 / span 2;
-}
+  section.main-text .grid-item-4 {
+    grid-column: 3 / span 4;
+    grid-row: 7 / span 2;
+  }
 
-section.main-text .grid-item-5 {
-  grid-column: 1 / span 4;
-  grid-row: 6 / span 2;
+  section.main-text .grid-item-5 {
+    grid-column: 1 / span 4;
+    grid-row: 6 / span 2;
+  }
+
+  section.main-text .inverted {
+    background-color: rgba(255, 255, 255, 0.8);
+  }
 }
