--- a/src/css/main.css
+++ b/src/css/main.css
@@ -47,6 +47,8 @@ code {
 .inverted {
   color: #000000;
   background-color: rgba(255, 255, 255);
+  position: relative; 
+  z-index: 1;
 }
 
 section.image-line img {
