--- a/src/css/main.css
+++ b/src/css/main.css
@@ -51,6 +51,13 @@ code {
   z-index: 1;
 }
 
+.overlay {
+  transition: transform 0.5s cubic-bezier(0.65, 0.05, 0.36, 1);
+  background: rgba(39, 39, 39, 0.6);
+  z-index: 1;
+}
+
+/* specific styles from here */
 section.image-line img {
   height: 30vh;
   width: 100%;
